--- a/dashboard/templates/cards/feeding.html
+++ b/dashboard/templates/cards/feeding.html
@@ -5,9 +5,6 @@
     </div>
     <div class="card-body text-primary">
         <h4 class="card-title">{% block title %}{% endblock %}</h4>
-        <div class="card-text">{% block content %}{% endblock %}</div>
-    </div>
-    <div class="card-footer text-muted">
-        {% block footer %}{% endblock %}
+        <div class="card-text text-muted">{% block content %}{% endblock %}</div>
     </div>
 </div>
