--- a/dashboard/templates/cards/tummytime.html
+++ b/dashboard/templates/cards/tummytime.html
@@ -5,10 +5,7 @@
     </div>
     <div class="card-body text-success">
         <h4 class="card-title">{% block title %}{% endblock %}</h4>
-        <div class="card-text">{% block content %}{% endblock %}</div>
+        <div class="card-text text-muted">{% block content %}{% endblock %}</div>
     </div>
     {% block listgroup %}{% endblock %}
-    <div class="card-footer text-muted">
-        {% block footer %}{% endblock %}
-    </div>
 </div>
