--- a/dashboard/templates/cards/feeding_last_method.html
+++ b/dashboard/templates/cards/feeding_last_method.html
@@ -3,13 +3,5 @@
 {% block header %}Last Feeding Method{% endblock %}
 
 {% block title %}
-    <h2 class="display-4 text-center">{{ feeding.method }}</h2>
+    <div class="display-4 text-center">{{ feeding.method }}</div>
 {% endblock %}
-
-{% block content %}
-    {% if feeding.amount %}
-        <div class="text-muted">Amount: {{ feeding.amount }}oz.</div>
-    {% endif %}
-{% endblock %}
-
-{% block footer %}{{ feeding.end }}{% endblock %}
