--- a/dashboard/templates/cards/feeding_last.html
+++ b/dashboard/templates/cards/feeding_last.html
@@ -3,12 +3,18 @@
 {% block header %}Last Feeding{% endblock %}
 
 {% block title %}
-    <strong>{{ feeding.end|timesince }}</strong> ago
+    {% if feeding %}
+        {{ feeding.end|timesince }} ago
+    {% else %}
+        Never
+    {% endif %}
 {% endblock %}
 
 {% block content %}
-    {{ feeding.type }}, {{ feeding.method }}
-    {% if feeding.amount %}
-        , {{ feeding.amount }}oz.
+    {% if feeding %}
+        {{ feeding.type }}, {{ feeding.method }}
+        {% if feeding.amount %}
+            , {{ feeding.amount }}oz.
+        {% endif %}
     {% endif %}
 {% endblock %}
