--- a/dashboard/templates/cards/sleep_day.html
+++ b/dashboard/templates/cards/sleep_day.html
@@ -13,4 +13,6 @@
     {% endif %}
 {% endblock %}
 
-{% block content %}{{ count }} sleep entries{% endblock %}
+{% block content %}
+    {% if count > 0 %}{{ count }} sleep entries{% endif %}
+{% endblock %}
