--- a/dashboard/templates/cards/timer_list.html
+++ b/dashboard/templates/cards/timer_list.html
@@ -4,7 +4,7 @@
 
 {% block title %}
     {% with instances|length as count %}
-        <strong>{{ count }}</strong> active timer{{ count|pluralize }}
+        {{ count }} active timer{{ count|pluralize }}
     {% endwith %}
 {% endblock %}
 
