--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -1,36 +1,38 @@
 {% extends 'cards/diaperchange.html' %}
 
-{% block header %}Diaper Change Types{% endblock %}
+{% block header %}Diaper Changes{% endblock %}
 
 {% block title %}
-    <strong>Past Week</strong>
+    Past Week
 {% endblock %}
 
 {% block content %}
     {% for key, info in stats.items %}
-        <div class="progress mt-3">
+        {% if info.wet > 0 or info.solid > 0 %}
+            <div class="progress mt-3">
 
-            {% if info.wet_pct > 0 %}
-                <div class="progress-bar bg-primary lead"
-                     role="progressbar"
-                     style="width: {{ info.wet_pct }}%;">{{ info.wet }}&nbsp;wet</div>
-            {% endif %}
+                {% if info.wet_pct > 0 %}
+                    <div class="progress-bar bg-primary lead"
+                         role="progressbar"
+                         style="width: {{ info.wet_pct }}%;">{{ info.wet }}&nbsp;wet</div>
+                {% endif %}
 
-            {% if info.solid_pct > 0 %}
-                <div class="progress-bar bg-secondary lead"
-                     role="progressbar"
-                     style="width: {{ info.solid_pct }}%;">
-                    <strong>{{ info.solid }}</strong>&nbsp;solid</div>
-            {% endif %}
-        </div>
-        <div class="text-center text-light small">
-            {% if key == 0  %}
-                today
-            {% elif key == 1 %}
-                yesterday
-            {% else %}
-                {{ key }} days ago
-            {% endif %}
-        </div>
+                {% if info.solid_pct > 0 %}
+                    <div class="progress-bar bg-secondary lead"
+                         role="progressbar"
+                         style="width: {{ info.solid_pct }}%;">
+                        <strong>{{ info.solid }}</strong>&nbsp;solid</div>
+                {% endif %}
+            </div>
+            <div class="text-center text-light small">
+                {% if key == 0  %}
+                    today
+                {% elif key == 1 %}
+                    yesterday
+                {% else %}
+                    {{ key }} days ago
+                {% endif %}
+            </div>
+        {% endif %}
     {% endfor %}
 {% endblock %}
