--- a/dashboard/templates/cards/sleep.html
+++ b/dashboard/templates/cards/sleep.html
@@ -4,7 +4,7 @@
         {% block header %}{% endblock %}
     </div>
     <div class="card-body">
-        <h4 class="card-title">{% block title %}{% endblock %}</h4>
+        <span class="card-title h4"><strong>{% block title %}{% endblock %}</strong></span>
         <div class="card-text text-muted">{% block content %}{% endblock %}</div>
     </div>
 </div>
