--- a/dashboard/templates/cards/timer.html
+++ b/dashboard/templates/cards/timer.html
@@ -4,7 +4,7 @@
         {% block header %}{% endblock %}
     </div>
     <div class="card-body text-light">
-        <h4 class="card-title">{% block title %}{% endblock %}</h4>
+        <span class="card-title h4"><strong>{% block title %}{% endblock %}</strong></span>
         <div class="card-text">{% block content %}{% endblock %}</div>
     </div>
     {% block listgroup %}{% endblock %}
