Display a message when there is not enough data to generate a report.

--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -11,7 +11,15 @@
 
 {% block content %}
     <div class="container-fluid">
-        {{ html|safe }}
+        {% if html %}
+            {{ html|safe }}
+        {% else %}
+            <div class="jumbotron text-center">
+                <i class="icon icon-sad" aria-hidden="true"></i>
+                There is no enough data to generate this report.
+                <i class="icon icon-sad" aria-hidden="true"></i>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
 
