Refactor card templates and styling.

--- a/dashboard/templates/cards/diaperchange_last.html
+++ b/dashboard/templates/cards/diaperchange_last.html
@@ -1,7 +1,6 @@
-{% extends 'cards/diaperchange.html' %}
+{% extends 'cards/base.html' %}
 
 {% block header %}Last Diaper Change{% endblock %}
-
 
 {% block title %}
     {% if change %}
