--- a/dashboard/templates/cards/sleep_last.html
+++ b/dashboard/templates/cards/sleep_last.html
@@ -1,4 +1,4 @@
-{% extends 'cards/sleep.html' %}
+{% extends 'cards/base.html' %}
 {% load duration %}
 
 {% block header %}Last Slept{% endblock %}
