Check and update timer active state on update.

--- a/core/static_src/scss/timers.scss
+++ b/core/static_src/scss/timers.scss
@@ -1,7 +1,9 @@
-#view-timer-detail {
-    #timer-status {
-        font-size: $h1-font-size;
-        font-weight: $display1-weight;
+#timer-status {
+    font-size: $h1-font-size;
+    font-weight: $display1-weight;
+
+    &.timer-stopped {
+        color: theme-color('danger');
     }
 }
 
