--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row align-items-start">
+    <div id="dashboard-child" class="row align-items-start">
         <div class="col-lg-4 col-md-6 col-sm-12">
             {% card_feeding_last object %}
             {% card_feeding_last_method object %}
@@ -27,4 +27,10 @@
             {% card_diaperchange_types object %}
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script type="application/javascript">
+        BabyBuddy.Dashboard.watch('dashboard-child');
+    </script>
 {% endblock %}
