added date and time formats

--- a/core/templates/core/diaperchange_form.html
+++ b/core/templates/core/diaperchange_form.html
@@ -31,7 +31,7 @@
         $(function () {
             $('#datetimepicker_time').datetimepicker({
                 defaultDate: 'now',
-                format: 'YYYY-MM-DD HH:mm'
+                format: '{{ MOMENTJS_FORMAT }}'
             });
         });
     </script>
