--- a/core/templates/core/sleep_list.html
+++ b/core/templates/core/sleep_list.html
@@ -26,8 +26,8 @@
                     <tr>
                         <th scope="row"><a href="{% url 'child' sleep.child.slug %}">{{ sleep.child }}</a></th>
                         <td>{{ sleep.duration|duration_string }}</td>
-                        <td>{{ sleep.start|date:'n/j/y G:i' }}</td>
-                        <td>{{ sleep.end|date:'n/j/y G:i' }}</td>
+                        <td>{{ sleep.start|date:'DATETIME_FORMAT' }}</td>
+                        <td>{{ sleep.end|date:'DATETIME_FORMAT' }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
 
