--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -26,7 +26,7 @@
     <script type="text/javascript">
         $(function () {
             $('#datetimepicker_start').datetimepicker({
-                format: 'YYYY-MM-DD HH:mm:ss'
+                format: '{{ MOMENTJS_FORMAT }}'
             });
         });
     </script>
