--- a/dashboard/templates/cards/tummytime_day.html
+++ b/dashboard/templates/cards/tummytime_day.html
@@ -8,7 +8,7 @@
         {{ stats.total|duration_string }}
     {% else %}
         <i class="icon icon-sad" aria-hidden="true"></i>
-        <strong>None yet today</strong>
+        None yet today
         <i class="icon icon-sad" aria-hidden="true"></i>
     {% endif %}
 {% endblock %}
