Add confirmation form for Child delete.

--- a/core/templates/core/child_confirm_delete.html
+++ b/core/templates/core/child_confirm_delete.html
@@ -14,8 +14,15 @@
         {% csrf_token %}
         <h1>Are you sure you want to delete <span class="text-info">{{ object }}</span>?</h1>
         <div class="form-group">
-            <label for="confirm_name">To confirm this action. Type the full name of the child below.</label>
-            <input type="text" id="confirm_name" name="confirm_name" class="form-control" placeholder="{{ object }}" />
+            <label for="{{ form.confirm_name.id_for_label }}">To confirm this action. Type the full name of the child below.</label>
+            {% if form.confirm_name.errors %}
+                {{ form.confirm_name|add_class:"form-control is-invalid" }}
+            {% else %}
+                {{ form.confirm_name|add_class:"form-control" }}
+            {% endif %}
+            {% if form.confirm_name.errors %}
+                <div class="invalid-feedback">{{ form.confirm_name.errors.0 }}</div>
+            {% endif %}
         </div>
         <input type="submit" value="Delete" class="btn btn-danger" />
         <a href="{% url 'child-list' %}" class="btn btn-default">Cancel</a>
