--- a/babybuddy/static_src/scss/_global.scss
+++ b/babybuddy/static_src/scss/_global.scss
@@ -5,3 +5,8 @@
     right: 0;
     left: auto; // Reset the default from `.dropdown-menu`
 }
+
+// Temporary workaround. See: https://github.com/tempusdominus/bootstrap-4/issues/18
+.bootstrap-datetimepicker-widget.dropdown-menu {
+    width: auto; // Reset the default
+}
