Fix style for datetime picker
Workaround for tempusdominus/bootstrap-4#18
Resolves #6

--- a/babybuddy/static_src/scss/_global.scss
+++ b/babybuddy/static_src/scss/_global.scss
@@ -6,6 +6,11 @@
     left: auto; // Reset the default from `.dropdown-menu`
 }
 
+// Temporary workaround. See: https://github.com/tempusdominus/bootstrap-4/issues/18
+.bootstrap-datetimepicker-widget.dropdown-menu {
+    width: auto; // Reset the default
+}
+
 // BB form fields do not follow typical BS4 style that enables this display.
 .invalid-feedback {
     display: block;
