--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -9,6 +9,7 @@
 
 {% block content %}
     <h1>Children</h1>
+    {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead class="thead-inverse">
@@ -50,9 +51,8 @@
                 {% endfor %}
             </tbody>
         </table>
-
-        {% include 'babybuddy/paginator.html' %}
     </div>
+    {% include 'babybuddy/paginator.html' %}
 
     {% if perms.core.add_child %}
         <a href="{% url 'child-add' %}" class="btn btn-sm btn-success">
