--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -10,6 +10,7 @@
 
 {% block content %}
     <h1>Diaper Changes</h1>
+    {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead class="thead-inverse">
@@ -55,9 +56,8 @@
                 {% endfor %}
             </tbody>
         </table>
-
-        {% include 'babybuddy/paginator.html' %}
     </div>
+    {% include 'babybuddy/paginator.html' %}
 
     {% if perms.core.add_diaperchange %}
         <a href="{% url 'diaperchange-add' %}" class="btn btn-sm btn-success">
