--- a/dashboard/templates/cards/sleep_naps_day.html
+++ b/dashboard/templates/cards/sleep_naps_day.html
@@ -1,7 +1,7 @@
 {% extends 'cards/base.html' %}
 {% load duration %}
 
-{% block header %}Today's Naps <small><em>(7AM - 7PM)</em></small>{% endblock %}
+{% block header %}Today's Naps{% endblock %}
 
 {% block title %}
     {% if count %}
