Move timeline code to core and integrate with Child detail view.

--- a/core/static_src/scss/core.scss
+++ b/core/static_src/scss/core.scss
@@ -3,3 +3,12 @@
         max-width: 150px;
     }
 }
+
+@include media-breakpoint-up(md) {
+    #view-child {
+        .child-detail-column {
+            position: fixed;
+            width: 100%;
+        }
+    }
+}
