Add simple weight report.

--- a/dashboard/templates/dashboard/child_button_group.html
+++ b/dashboard/templates/dashboard/child_button_group.html
@@ -18,6 +18,7 @@
             <a class="dropdown-item" href="{% url 'reports:report-diaperchange-lifetimes-child' object.slug %}">Diaper Lifetimes</a>
             <a class="dropdown-item" href="{% url 'reports:report-sleep-pattern-child' object.slug %}">Sleep Pattern</a>
             <a class="dropdown-item" href="{% url 'reports:report-sleep-totals-child' object.slug %}">Sleep Totals</a>
+            <a class="dropdown-item" href="{% url 'reports:report-weight-weight-child' object.slug %}">Weight</a>
         </div>
     </div>
 
