Refactor Averages card as Statistics carousel card.

--- a/dashboard/static_src/scss/cards.scss
+++ b/dashboard/static_src/scss/cards.scss
@@ -17,22 +17,6 @@
     }
 }
 
-.card-averages {
-    @extend .border-light;
-
-    .card-header {
-        @extend .text-dark, .bg-light;
-    }
-
-    .card-body {
-        @extend .text-light;
-
-        .container {
-            padding: 0;
-        }
-    }
-}
-
 .card-diaperchange {
     @extend .border-danger;
 
@@ -66,6 +50,22 @@
 
     .card-header {
         @extend .text-white, .bg-secondary;
+    }
+}
+
+.card-statistics {
+    @extend .border-light;
+
+    .card-header {
+        @extend .text-dark, .bg-light;
+    }
+
+    .card-body {
+        @extend .text-light;
+
+        .container {
+            padding: 0;
+        }
     }
 }
 
