--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -15,7 +15,7 @@
             {% card_feeding_last object %}
             {% card_feeding_last_method object %}
             {% card_timer_list %}
-            {% card_averages object %}
+            {% card_statistics object %}
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
             {% card_sleep_last object %}
